<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>qt_ros</name>
  <version>0.0.0</version>
  <description>Qt + ROS 2 Action package</description>

  <maintainer email="madjeeve123@gmail.com">maddy</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>

  <!-- Action generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for action / msg packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing (optional but good practice) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>